# encargs

./: .clang-format  LICENSE.GPL-2.0  LICENSE.MIT  Makefile.in  README.md  base64.c  configure  encargs.c  meson.build  undertools-lib.sh  util.c  util.h
tests/: 1-base64.sh  2-exec-argz.sh  3-base64-whitespace.sh  meson.build
