test('1-base64', find_program('1-base64.sh'), verbose: true, is_parallel: false)
test(
    '2-exec-argz',
    find_program('2-exec-argz.sh'),
    verbose: true,
    is_parallel: false,
)
test(
    '3-base64-whitespace',
    find_program('3-base64-whitespace.sh'),
    verbose: true,
    is_parallel: false,
)
